# matf-ni-mi201014

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  project.ipynb  run.py
.ipynb_checkpoints/: project-checkpoint.ipynb
common/: ni_arg_parse.h  ni_common.h  ni_log.h  ni_points.h  ni_timer.h  ni_types.h
common/fast_io/: fast_io_core.h  fast_io_crypto.h  fast_io_hosted.h
common/fast_io/fast_io_core_impl/: black_hole.h  buffer_view.h  intrinsics.h  local_new_array_ptr.h  mode.h  parse_code.h  print_freestanding.h  print_reserver.h  scan_freestanding.h  secure_clear_guard.h  utils.h
common/fast_io/fast_io_core_impl/codecvt/: utf.h
common/fast_io/fast_io_core_impl/concepts/: stream.h
common/fast_io/fast_io_core_impl/freestanding/: impl.h
common/fast_io/fast_io_core_impl/integers/: crypto_hash.h  impl.h  integer.h
common/fast_io/fast_io_core_impl/simd/: impl.h  x86_64.h
common/fast_io/fast_io_crypto/hash/: hash.h  sha512.h  sha_impl.h
common/fast_io/fast_io_driver/: cryptopp_driver.h  openssl_driver.h
common/fast_io/fast_io_driver/mfc_impl/: atl_file.h  mfc_file.h
common/fast_io/fast_io_driver/openssl_driver/: bio.h  sha.h
common/fast_io/fast_io_freestanding_impl/io_buffer/: main.h
common/fast_io/fast_io_hosted/: posix_error.h  time.h  wrapper.h
common/fast_io/fast_io_unit/: timespec.h
k_means_python_sklearn/: data_generation.py  k_means_sklearn.py  visualize.py
src/k_means_cpp_cpu_parallel/: kmeans.h  main.cpp
src/k_means_cpp_cpu_sequential/: kmeans.h  main.cpp
src/k_means_taskflow_cpu_parallel/: kmeans.h  main.cpp
(+17 files in other folders)
